# ackermann_simulation

./: .gitignore  README.md
ack_bringup/: CMakeLists.txt  package.xml
ack_bringup/config/: ros_gz_bridge.yaml
ack_bringup/launch/: ack_bringup.launch.py
ack_control/: CMakeLists.txt  package.xml
ack_control/include/ack_control/: ackermann_steering_controller.hpp  visibility_control.h
ack_control/src/: ackermann_steering_controller.cpp  ackermann_steering_controller.yaml
ack_description/: CMakeLists.txt  package.xml
ack_description/hooks/: ack_description.sh.in
ack_description/models/arv/: model.config  model.sdf
ack_description/tf/: frames_2023-12-19_12.34.38.gv
ack_description/urdf/: arv.urdf  arv.urdf.xacro  arv_imu.gazebo.xacro  arv_lidar.gazebo.xacro  arv_properties.urdf.xacro  arv_utils.urdf.xacro  standalone.urdf.xacro
ack_gazebo/: CMakeLists.txt  package.xml
ack_gazebo/include/ack_gazebo/: BasicSystem.hh  FullSystem.hh
ack_gazebo/src/: BasicSystem.cc  FullSystem.cc
ack_gazebo/worlds/: arv.sdf  as.sdf
ack_imu/: CMakeLists.txt  package.xml
ack_imu/include/ack_imu/: ack_imu.hpp  visibility_control.h
ack_imu/src/: ack_imu.cpp  ack_imu_parameters.yaml
ars_bringup/: CMakeLists.txt  package.xml
ars_bringup/config/: ars.rviz  map_server_params.yaml  ros_gz_bridge.yaml
ars_bringup/hooks/: ars_bringup.dsv.in
ars_bringup/launch/: ars_bringup.launch.py  ars_teleop.launch.py  articulated.launch.py  new.launch.py
ars_description/: CMakeLists.txt  package.xml
ars_description/config/: ars_description.yaml
ars_description/models/arc/: model.config  model.sdf
ars_description/urdf/: arc.urdf  arc.xacro  gazebo.xacro  macros.xacro  materials.xacro  properties.xacro  ros2_control.xacro  transmissions.xacro
ars_description/urdf/parts/: chassis.xacro  front_wheel.xacro  hinge.xacro  rear_wheel.xacro
ars_description/urdf/sensors/: imu.xacro  lidar.xacro
arv_bringup/: CMakeLists.txt  package.xml
arv_bringup/config/: arv.rviz  ros_gz_bridge.yaml
arv_bringup/launch/: arv_bringup.launch.py
arv_description/: CMakeLists.txt  package.xml
arv_description/hooks/: arv_description.dsv.in
arv_description/models/: model.config  model.sdf
arv_description/models/arv/: model.sdf
arv_description/urdf/: arv.urdf  arv.urdf.xacro  arv_lidar.gazebo.xacro  standalone.urdf.xacro
arv_description/urdf/sensor_plugins/: arv_imu.gazebo.xacro  arv_lidar.gazebo.xacro
arv_gazebo/: CMakeLists.txt  package.xml
arv_gazebo/hooks/: arv_gazebo.dsv.in  arv_gazebo.sh.in
arv_gazebo/include/arv_gazebo/: BasicSystem.hh  FullSystem.hh
arv_gazebo/src/: BasicSystem.cc  FullSystem.cc
arv_gazebo/worlds/: arv.sdf  as.sdf  diff_drive.sdf  le.sdf
