<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ars_bringup</name>
  <version>0.0.0</version>
  <description>Contains launch files for the autonomous racing simulator project</description>
  <maintainer email="balazsph@outlook.hu">Balazs Tuba</maintainer>
  <license>TODO</license>
  <author>Balazs Tuba</author>

  <depend>ars_description</depend>

  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ackermann_steering_controller</exec_depend>
  <exec_depend>xacro</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>