<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arv_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo-specific implementations for the ackermann_steering project</description>
  <maintainer email="balazsph@outlook.hu">Balazs Tuba</maintainer>
  <license>TODO</license>
  <author>Balazs Tuba</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>arv_description</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

